--- a/app/components/ui/Player/Player.module.scss
+++ b/app/components/ui/Player/Player.module.scss
@@ -2,8 +2,6 @@
 	@apply fixed bottom-0 right-1/2 w-1/2 p-3 bg-white rounded-t-xl;
 	transform: translateX(50%);
 	box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
-	.audio {
-	}
 
 	.controls {
 		@apply flex items-center justify-around;
@@ -31,6 +29,11 @@
 					> svg {
 						@apply opacity-70 transition-opacity hover:opacity-100;
 					}
+					&.looped {
+						> svg {
+							@apply opacity-100;
+						}
+					}
 				}
 				&:nth-child(3) {
 					> svg {
@@ -47,27 +50,35 @@
 				width: 1.5em;
 				height: 1.5em;
 			}
-			.value {
-				width: 100%;
-				height: 12px;
-				-webkit-appearance: none;
-				background: #d3d3d3;
-				outline: none;
-				border-radius: 15px;
-				overflow: hidden;
-				cursor: pointer;
-				&::-webkit-slider-thumb {
-					-webkit-appearance: none;
-					width: 12px;
-					height: 12px;
-					border-radius: 50%;
-					background: #ffff;
-					cursor: pointer;
-					border: 1px solid #000000;
-					box-shadow: -407px 0 0 400px #000000;
-				}
-			}
 		}
+	}
+}
+
+.value {
+	width: 100%;
+	height: 12px;
+	-webkit-appearance: none;
+	background: #d3d3d3;
+	outline: none;
+	border-radius: 15px;
+	overflow: hidden;
+	cursor: pointer;
+	&::-webkit-slider-thumb {
+		-webkit-appearance: none;
+		width: 12px;
+		height: 12px;
+		border-radius: 50%;
+		background: #ffff;
+		cursor: pointer;
+		border: 1px solid #000000;
+		box-shadow: -407px 0 0 400px #000000;
+	}
+}
+
+.progressBar {
+	@apply flex items-center gap-2 justify-center mt-2;
+	.value {
+		width: 70%;
 	}
 }
 
