--- a/app/components/layout/Sidebar/genres/Genre.module.scss
+++ b/app/components/layout/Sidebar/genres/Genre.module.scss
@@ -3,7 +3,8 @@
 }
 
 .genre {
-	@apply block rounded-2xl p-3 bg-white max-w-fit font-medium transition-colors;
+	@apply block rounded-2xl p-3 bg-white max-w-fit font-medium transition-colors whitespace-nowrap;
+	box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.1);
 	&:hover {
 		@apply bg-dark-700 text-white;
 	}
@@ -13,5 +14,5 @@
 }
 
 .genre_container {
-	@apply flex flex-wrap gap-3 mt-5 animate-fade;
+	@apply flex flex-wrap gap-3 mt-5;
 }
