--- a/app/components/ui/Gallery/Gallery.module.scss
+++ b/app/components/ui/Gallery/Gallery.module.scss
@@ -1,5 +1,5 @@
 .gallery {
-	@apply flex flex-wrap gap-5 justify-center mt-8 pb-20 animate-fade;
+	@apply flex flex-wrap gap-5 justify-center mt-8 pb-20;
 }
 
 .card {
