--- a/app/components/ui/Player/Player.module.scss
+++ b/app/components/ui/Player/Player.module.scss
@@ -1,17 +1,17 @@
 .player {
-	@apply fixed bottom-0 right-1/2 w-1/2 p-3 bg-white rounded-t-xl;
+	@apply fixed bottom-0 right-1/2 w-full lg:w-2/3 p-3 bg-white rounded-t-xl xl:w-1/2;
 	transform: translateX(50%);
 	box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
-
 	.controls {
 		@apply flex items-center justify-around;
 
 		.left {
-			@apply whitespace-nowrap overflow-hidden w-24;
+			@apply whitespace-nowrap overflow-hidden;
+			width: 140px;
 			.song_title {
 				@apply inline-block;
 				&.run {
-					@apply pl-8;
+					padding-left: 100%;
 					animation: scroll 7s infinite linear;
 				}
 			}
