--- a/app/components/ui/CountryNav/CountryNav.module.scss
+++ b/app/components/ui/CountryNav/CountryNav.module.scss
@@ -14,6 +14,7 @@
 .country_menu {
 	@apply flex justify-between bg-white p-4 rounded-xl animate-fade;
 	max-width: 350px;
+	box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.1);
 }
 
 .country_menu_parent {
