Fix(player now works even if we go to other page(saving data to localStorage). Features(completed artist card, new custom loader

--- a/app/components/ui/ArtistDetails/ArtistDetails.module.scss
+++ b/app/components/ui/ArtistDetails/ArtistDetails.module.scss
@@ -1,5 +1,5 @@
 .artist_details {
-	@apply grid place-items-center grid-cols-1 mt-20 relative;
+	@apply grid place-items-center grid-cols-1 mt-20 relative animate-scale;
 
 	> p {
 		@apply font-medium text-2xl mt-2;
