--- a/app/components/ui/RelatedSongs/RelatedSongs.module.scss
+++ b/app/components/ui/RelatedSongs/RelatedSongs.module.scss
@@ -1,14 +1,16 @@
 .related_item {
-	@apply flex items-center bg-white rounded-xl p-2 cursor-pointer;
-	width: 200px;
+	@apply flex bg-white rounded-xl p-2 cursor-pointer gap-2;
+	max-width: fit-content;
 	box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.1);
+	&.active {
+		@apply bg-dark-700 text-white animate-fade;
+	}
 	> span {
 		&:last-child {
-			@apply block mx-auto truncate;
-			max-width: 150px;
+			@apply block whitespace-nowrap;
 		}
 	}
 }
 .related_song_menu {
-	@apply flex flex-col items-center gap-2;
+	@apply flex gap-4 ml-11 mt-4 flex-wrap;
 }
