--- a/app/components/ui/RelatedSongs/RelatedSongs.module.scss
+++ b/app/components/ui/RelatedSongs/RelatedSongs.module.scss
@@ -2,8 +2,32 @@
 	@apply flex bg-white rounded-xl p-2 cursor-pointer gap-2;
 	max-width: fit-content;
 	box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.1);
+	&:before {
+		position: absolute;
+		content: '';
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		border-radius: 12px;
+		box-shadow: 0 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.2),
+			0 0 0 2px rgba(0, 0, 0, 0.2), 0 0 0 3px rgba(0, 0, 0, 0.2);
+		z-index: -1;
+		animation: ripples 1s linear infinite;
+		animation-play-state: paused;
+		opacity: 0;
+		visibility: hidden;
+		transition: 0.5s;
+		transform: scale(0.5);
+	}
 	&.active {
-		@apply bg-dark-700 text-white animate-fade;
+		@apply bg-dark-700 text-white animate-fade relative;
+		&:before {
+			animation-play-state: running;
+			opacity: 1;
+			visibility: visible;
+			transform: scale(1);
+		}
 	}
 	> span {
 		&:last-child {
@@ -13,4 +37,11 @@
 }
 .related_song_menu {
 	@apply flex gap-4 ml-11 mt-4 flex-wrap;
+}
+
+@keyframes ripples {
+	to {
+		box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2), 0 0 0 4px rgba(0, 0, 0, 0.2),
+			0 0 0 6px rgba(0, 0, 0, 0.2), 0 0 0 8px rgba(0, 0, 0, 0);
+	}
 }
