--- a/app/components/ui/SongDetails/SongDetails.module.scss
+++ b/app/components/ui/SongDetails/SongDetails.module.scss
@@ -24,12 +24,13 @@
 	}
 
 	.song_details_card_right {
-		@apply absolute right-0 bottom-0 text-white p-4 z-2;
+		@apply absolute right-0 bottom-0 text-white p-4 z-2 backdrop-opacity-80;
 		> p {
 			@apply opacity-60 text-base;
 		}
 		> a {
 			@apply text-right border-b-2 border-transparent transition-all hover:border-white;
+			text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 		}
 	}
 }
