--- a/app/components/ui/Player/Player.module.scss
+++ b/app/components/ui/Player/Player.module.scss
@@ -1,5 +1,5 @@
 .player {
-	@apply fixed bottom-0 right-1/2 w-full lg:w-2/3 p-3 bg-white rounded-t-xl xl:w-1/2;
+	@apply fixed bottom-0 right-1/2 w-full lg:w-2/3 p-3 bg-white rounded-t-xl xl:w-1/2 z-3;
 	transform: translateX(50%);
 	box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
 	.controls {
